--- a/App.Service/AppProj.Service.csproj
+++ b/App.Service/AppProj.Service.csproj
@@ -59,6 +59,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="ServicesImpl\MapSummaryService.cs" />
     <Compile Include="ServicesImpl\ProgramByUserProfileService.cs" />
     <Compile Include="ServicesImpl\DistrictByUserProfileService.cs" />
     <Compile Include="ServicesImpl\DistrictDataService.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="ServicesImpl\SummerizedDataService.cs" />
     <Compile Include="ServicesImpl\UserLoginLogService.cs" />
     <Compile Include="ServicesImpl\UserProfileService.cs" />
+    <Compile Include="Services\IMapSummaryService.cs" />
     <Compile Include="Services\IProgramByUserProfileService.cs" />
     <Compile Include="Services\IDistrictByUserProfileService.cs" />
     <Compile Include="Services\IDistrictDataService.cs" />
