--- a/App.Data/AppProj.Data.csproj
+++ b/App.Data/AppProj.Data.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoriesImpl\BERDataItemWiseQuantityRepository.cs" />
     <Compile Include="RepositoriesImpl\BERDataPeopleWiseQuantityRepository.cs" />
+    <Compile Include="RepositoriesImpl\DistrictPatientRepository.cs" />
     <Compile Include="RepositoriesImpl\MapSummaryRepository.cs" />
     <Compile Include="RepositoriesImpl\StandingDataPcRelationRepository.cs" />
     <Compile Include="RepositoriesImpl\ProgramByUserProfileRepository.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="RepositoriesImpl\UserProfileRepository.cs" />
     <Compile Include="Repositories\IBERDataItemWiseQuantityRepository.cs" />
     <Compile Include="Repositories\IBERDataPeopleWiseQuantityRepository.cs" />
+    <Compile Include="Repositories\IDistrictPatientRepository.cs" />
     <Compile Include="Repositories\IMapSummaryRepository.cs" />
     <Compile Include="Repositories\IStandingDataPcRelationRepository.cs" />
     <Compile Include="Repositories\IProgramByUserProfileRepository.cs" />
