--- a/App.Web/AppProj.Web.csproj
+++ b/App.Web/AppProj.Web.csproj
@@ -3333,6 +3333,7 @@
     <Content Include="aspnet_client\system_web\4_5_27\crystalreportviewers13\preview.jsp" />
     <Content Include="Content\Message\External COVID-19 Sitrep_16 April 2020.pdf" />
     <Content Include="Content\css\brac\bundle.css.map" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\exportExcell.js" />
