--- a/App.Data/AppProj.Data.csproj
+++ b/App.Data/AppProj.Data.csproj
@@ -57,6 +57,8 @@
     <Compile Include="RepositoriesImpl\BERDataItemWiseQuantityRepository.cs" />
     <Compile Include="RepositoriesImpl\BERDataPeopleWiseQuantityRepository.cs" />
     <Compile Include="RepositoriesImpl\DistrictPatientRepository.cs" />
+    <Compile Include="RepositoriesImpl\DoctorsPolesRepository.cs" />
+    <Compile Include="RepositoriesImpl\DoctorsPoleVisitRepository.cs" />
     <Compile Include="RepositoriesImpl\MapSummaryRepository.cs" />
     <Compile Include="RepositoriesImpl\StandingDataPcRelationRepository.cs" />
     <Compile Include="RepositoriesImpl\ProgramByUserProfileRepository.cs" />
@@ -79,6 +81,8 @@
     <Compile Include="Repositories\IBERDataItemWiseQuantityRepository.cs" />
     <Compile Include="Repositories\IBERDataPeopleWiseQuantityRepository.cs" />
     <Compile Include="Repositories\IDistrictPatientRepository.cs" />
+    <Compile Include="Repositories\IDoctorsPolesRepository.cs" />
+    <Compile Include="Repositories\IDoctorsPoleVisitRepository.cs" />
     <Compile Include="Repositories\IMapSummaryRepository.cs" />
     <Compile Include="Repositories\IStandingDataPcRelationRepository.cs" />
     <Compile Include="Repositories\IProgramByUserProfileRepository.cs" />
