--- a/App.Domain/AppProj.Domain.csproj
+++ b/App.Domain/AppProj.Domain.csproj
@@ -89,10 +89,16 @@
     <Compile Include="DistrictSummery.cs">
       <DependentUpon>AppModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DoctorPoleStatus.cs">
+      <DependentUpon>AppModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DoctorsPole.cs">
       <DependentUpon>AppModel.tt</DependentUpon>
     </Compile>
     <Compile Include="DoctorsPoleVisit.cs">
+      <DependentUpon>AppModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DoctorsPoleVisitDetail.cs">
       <DependentUpon>AppModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Feature.cs">
@@ -107,6 +113,7 @@
     <Compile Include="ModelExt\BepDataSummeryModel.cs" />
     <Compile Include="ModelExt\BERDataItemWiseQuantityExt.cs" />
     <Compile Include="ModelExt\ChartModel.cs" />
+    <Compile Include="ModelExt\DoctorPoleDashboardModel.cs" />
     <Compile Include="ModelExt\MapModel.cs" />
     <Compile Include="ProgramByUserProfile.cs">
       <DependentUpon>AppModel.tt</DependentUpon>
