--- a/App.Domain/AppProj.Domain.csproj
+++ b/App.Domain/AppProj.Domain.csproj
@@ -104,6 +104,8 @@
     <Compile Include="DoctorsPoleVisitDetail.cs">
       <DependentUpon>AppModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Enums\ReportTypes.cs" />
+    <Compile Include="Enums\Utility.cs" />
     <Compile Include="Feature.cs">
       <DependentUpon>AppModel.tt</DependentUpon>
     </Compile>
@@ -153,6 +155,9 @@
       <DependentUpon>AppModel.tt</DependentUpon>
     </Compile>
     <Compile Include="SprRptProductMatrix_Result.cs">
+      <DependentUpon>AppModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SP_GenerateMapSummary1_Result.cs">
       <DependentUpon>AppModel.tt</DependentUpon>
     </Compile>
     <Compile Include="SP_GenerateMapSummary_Result.cs">
