--- a/App.Web/AppProj.Web.csproj
+++ b/App.Web/AppProj.Web.csproj
@@ -3627,6 +3627,10 @@
     <Content Include="Views\Main\Index - Copy.cshtml" />
     <Content Include="Views\Shared\_leftmenu.cshtml" />
     <Content Include="Views\SummerySubmission\Index - Copy.cshtml" />
+    <Content Include="Views\Standing\DistQuestion - Copy.cshtml" />
+    <Content Include="Views\Standing\Index - Copy.cshtml" />
+    <Content Include="Views\UserProfile\Index - Copy.cshtml" />
+    <Content Include="Views\Role\Index - Copy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
