--- a/App.Web/AppProj.Web.csproj
+++ b/App.Web/AppProj.Web.csproj
@@ -3599,7 +3599,7 @@
     <Content Include="Views\Main\WorldMap.cshtml" />
     <Content Include="Views\MapSummary\Index.cshtml" />
     <Content Include="Views\Main\BracDashboard.cshtml" />
-    <None Include="Views\DistrictSubmission\IndexBrac.cshtml" />
+    <Content Include="Views\DistrictSubmission\IndexBrac.cshtml" />
     <Content Include="Views\Shared\_LayoutGeneral.cshtml" />
     <Content Include="Views\Main\Dashboard - Copy.cshtml" />
     <Content Include="Content\src\fonts\HelveticaNeue-regular.ttf" />
