--- a/App.Domain/AppProj.Domain.csproj
+++ b/App.Domain/AppProj.Domain.csproj
@@ -92,6 +92,9 @@
     <Compile Include="DistrictSummery.cs">
       <DependentUpon>AppModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DoctorPoleCouncilling.cs">
+      <DependentUpon>AppModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DoctorPoleStatus.cs">
       <DependentUpon>AppModel.tt</DependentUpon>
     </Compile>
