--- a/App.Web/AppProj.Web.csproj
+++ b/App.Web/AppProj.Web.csproj
@@ -3635,6 +3635,8 @@
     <Content Include="Views\UserProfile\Index - Copy.cshtml" />
     <Content Include="Views\Role\Index - Copy.cshtml" />
     <Content Include="Views\FileUpload\FileUpload.cshtml" />
+    <Content Include="Views\DoctorPole\Edit.cshtml" />
+    <Content Include="Views\DoctorPole\Counciling.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
