--- a/App.Web/Web.config
+++ b/App.Web/Web.config
@@ -10,8 +10,8 @@
   </configSections>
 
   <connectionStrings>
-    <add name="AppModelContainer" connectionString="metadata=res://*/AppModel.csdl|res://*/AppModel.ssdl|res://*/AppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TECH-Akramul;initial catalog=Covid;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="AppModelContainer_Exec" connectionString="data source=TECH-Akramul;initial catalog=Covid;user id=sa;password=123456" providerName="System.Data.SqlClient" />
+    <add name="AppModelContainer" connectionString="metadata=res://*/AppModel.csdl|res://*/AppModel.ssdl|res://*/AppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HOER2406101643A;initial catalog=Covid_live;user id=sa;password=Password1@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AppModelContainer_Exec" connectionString="data source=HOER2406101643A;initial catalog=Covid_live;user id=sa;password=Password1@" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
