solved the UI come from kollol da

--- a/App.Web/AppProj.Web.csproj
+++ b/App.Web/AppProj.Web.csproj
@@ -3359,6 +3359,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\brac\app.js" />
+    <Content Include="Scripts\brac\bootstrap-legacy.js" />
     <Content Include="Scripts\brac\bootstrap_4.4.1.js" />
     <Content Include="Scripts\brac\jquery.js" />
     <Content Include="Scripts\brac\popper.js" />
