--- a/App.Domain/AppProj.Domain.csproj
+++ b/App.Domain/AppProj.Domain.csproj
@@ -186,6 +186,9 @@
     </Compile>
     <Compile Include="ViewModel\ReportVM.cs" />
     <Compile Include="ViewModel\SummeryStatus.cs" />
+    <Compile Include="WorkstationLeaveQuarantine.cs">
+      <DependentUpon>AppModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config">
