--- a/App.Web/Web.config
+++ b/App.Web/Web.config
@@ -29,6 +29,8 @@
     <add key="CrystalImageCleaner-Sleep" value="60000" />
     <add key="CrystalImageCleaner-Age" value="120000" />
     <add key="BDC_File_Types" value="83,88" />
+    <add key ="kiosk_doctor" value="5A91E709-4D68-4EBC-B835-264EA7B2E5EC"/>
+    <add key="kiosk_hr_email" value="akram.haider@brac.net"/>
   </appSettings>
   <system.web>
     <httpHandlers>
