--- a/App.Data/AppProj.Data.csproj
+++ b/App.Data/AppProj.Data.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Infrastructure\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoriesImpl\DoctorPoleCouncillingRepository.cs" />
+    <Compile Include="RepositoriesImpl\KioskQuotaRepository.cs" />
     <Compile Include="RepositoriesImpl\ReportRepository.cs" />
     <Compile Include="RepositoriesImpl\BERDataItemWiseQuantityRepository.cs" />
     <Compile Include="RepositoriesImpl\BERDataPeopleWiseQuantityRepository.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="RepositoriesImpl\UserProfileRepository.cs" />
     <Compile Include="RepositoriesImpl\WorkstationLeaveQuarantineRepository.cs" />
     <Compile Include="Repositories\IDoctorPoleCouncillingRepository.cs" />
+    <Compile Include="Repositories\IKioskQuotaRepository.cs" />
     <Compile Include="Repositories\IReportRepository.cs" />
     <Compile Include="Repositories\IBERDataItemWiseQuantityRepository.cs" />
     <Compile Include="Repositories\IBERDataPeopleWiseQuantityRepository.cs" />
