--- a/App.Web/AppProj.Web.csproj
+++ b/App.Web/AppProj.Web.csproj
@@ -3659,6 +3659,9 @@
     <Content Include="Views\WorkstationLeaveQuarantine\Save.cshtml" />
     <Content Include="Views\RoleFeature\Index.cshtml" />
     <Content Include="Views\RoleFeature\Index -Copy.cshtml" />
+    <Content Include="Views\DoctorPole\FollowupIndex - Copy.cshtml" />
+    <Content Include="Views\DoctorPole\ReportIndex -  Copy.cshtml" />
+    <Content Include="Views\DoctorPole\HrIndex - Copy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
