--- a/App.Domain/App.Config
+++ b/App.Domain/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="AppModelContainer" connectionString="metadata=res://*/AppModel.csdl|res://*/AppModel.ssdl|res://*/AppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TECH-AKRAMUL;initial catalog=Covid;integrated security=True;persist security info=False;pooling=False;multipleactiveresultsets=False;connect timeout=60;trustservercertificate=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AppModelContainer" connectionString="metadata=res://*/AppModel.csdl|res://*/AppModel.ssdl|res://*/AppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HOER2406101643A;initial catalog=Covid;integrated security=True;persist security info=False;pooling=False;multipleactiveresultsets=False;connect timeout=60;trustservercertificate=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
